# CoDHeChat

./: .gitignore  PROJECT_REVIEW.md  QUICK_START.md  README.md  docker-compose.yml  rebuild-backend.sh  rebuild-frontend.sh
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  crud.py  database.py  logging_config.py  main.py  models.py  pyproject.toml  run_migrations.py  schemas.py  security.py  settings.py
backend/alembic/: env.py
backend/services/: chat_service.py
backend/tests/: conftest.py  test_main.py
docs/: PRODUCTION_GUIDE.md
my-chatbot/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
my-chatbot/src/: App.css  App.tsx  index.css  vite-env.d.ts
my-chatbot/src/components/: ChatContainer.tsx  Message.test.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx
my-chatbot/src/hooks/: useChatScroll.ts
my-chatbot/src/services/: chatService.ts  conversationService.ts  httpClient.ts  sessionService.ts
my-chatbot/src/theme/: theme.ts
my-chatbot/src/types/: chat.ts
